Неразрывные для мобильного

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -18,7 +18,7 @@
                                 img(width="40" height="40" alt="Бакурова Ангелина" src="assets/spk/bakurova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Бакурова Ангелина
-                                .pgmItemSpeakerPos Управляющий директор-начальник Офиса&nbsp;Agile-трансформации, Сбер
+                                .pgmItemSpeakerPos Управляющий директор-начальник Офиса Agile&#8209;трансформации, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -33,7 +33,7 @@
                                 img(width="40" height="40"  src="assets/spk/motina.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Мотина Юлия
-                                .pgmItemSpeakerPos Управляющий директор-начальник Продуктового офиса, Сбер
+                                .pgmItemSpeakerPos Управляющий директор&#8209;начальник Продуктового офиса, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -64,7 +64,7 @@
                                     img(width="40" height="40" src="assets/spk/motina.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Мотина Юлия
-                                    .pgmItemSpeakerPos Управляющий директор-начальник Продуктового офиса, Сбер
+                                    .pgmItemSpeakerPos Управляющий директор&#8209;начальник Продуктового офиса, Сбер
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/popov.png")
@@ -121,7 +121,7 @@
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
                     .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
-                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV-платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в разработку
+                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -137,7 +137,7 @@
                 .pgmItemTime 12:10 - 12:40
                 .pgmItemContent
                     .pgmItemTitle Как в рутине задач находить время на Disrupt
-                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а также поделюсь секретами, как придумывать новые, подрывные решения и находить время на Disrupt.
+                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости я расскажу, что помогает команде Домклика быстро проверять гипотезы и не бояться отвергать их, а&nbsp;также поделюсь секретами, как&nbsp;придумывать новые, подрывные решения и находить время на Disrupt.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -152,7 +152,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное, &mdash; как на нее влияет клиент.
+                    .pgmItemSubTitle В своем докладе я расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное, &mdash; как на нее влияет&nbsp;клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -180,8 +180,8 @@
 
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
-                    .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и каналов
-                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105 миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и разберем, как адаптировать сервис под клиента на&nbsp;примере особенного сегмента &ndash; людей с инвалидностью.
+                    .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и&nbsp;каналов
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и&nbsp;разберем, как адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -194,7 +194,7 @@
                                 img(width="40" height="40" alt="Павел Попко" src="assets/spk/popko.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Попко Павел
-                                .pgmItemSpeakerPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк&nbsp;для&nbsp;людей&nbsp;с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт&nbsp;по&nbsp;цифровой&nbsp;доступности, Сбер
+                                .pgmItemSpeakerPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк для&nbsp;людей с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт по&nbsp;цифровой доступности, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -329,14 +329,14 @@
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на примере создания онлайн-продукта корпоративного страхования. От идеи до ее реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
+                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до ее реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40"  src="assets/spk/baryshnikova.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Барышникова Елена
-                                .pgmItemSpeakerPos Владелец продукта в&nbsp;Центре&nbsp;Корпоративного&nbsp;Страхования, Сбер
+                                .pgmItemSpeakerPos Владелец продукта в&nbsp;Центре Корпоративного&nbsp;Страхования, Сбер
 
 
             .pgmItem
