--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -15,14 +15,14 @@
                         .spkPhotoWr
                             img(src="assets/spk/bakurova.png")
                     .spkFio Бакурова Ангелина
-                    .spkPos Управляющий директор-начальник Офиса&nbsp;Agile-трансформации, Сбер
+                    .spkPos Управляющий директор-начальник Офиса Agile&#8209;трансформации, Сбер
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/baryshnikova.png")
                     .spkFio Барышникова Елена
-                    .spkPos Владелец продукта в&nbsp;Центре&nbsp;Корпоративного&nbsp;Страхования, Сбер
+                    .spkPos Владелец продукта в&nbsp;Центре Корпоративного Страхования, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -106,7 +106,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/popko.png")
                     .spkFio Попко Павел
-                    .spkPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк&nbsp;для&nbsp;людей&nbsp;с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт&nbsp;по&nbsp;цифровой&nbsp;доступности, Сбер
+                    .spkPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк для&nbsp;людей с&nbsp;инвалидностью&raquo;, Дивизион &laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт по&nbsp;цифровой доступности, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -120,14 +120,14 @@
                         .spkPhotoWr
                             img(src="assets/spk/prudnikov.png")
                     .spkFio Прудников Кирилл
-                    .spkPos Руководитель направления &laquo;Управление&raquo; в Skillbox
+                    .spkPos Руководитель направления &laquo;Управление&raquo; в&nbsp;Skillbox
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/pustovit.png")
                     .spkFio Пустовит Александр
-                    .spkPos Партнер в Product.Vision
+                    .spkPos Партнер в&nbsp;Product.Vision
 
                 //.spkItem
                     .spkPhoto
