Неразрывные для мобильного SE

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -121,7 +121,7 @@
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
                     .pgmItemTitle От идеи до масштабного запуска и выручки за 1 год
-                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
+                    .pgmItemSubTitle В этом выступлении я расскажу, как мы:<br>- За один год построили полноценную CV&#8209;платформу;<br>- Выпустили линейку из трех продуктов, на&nbsp;которых сразу же начали зарабатывать;<br>- Нашли свою нишу, когда на рынке уже&nbsp;были конкуренты с 10-летним опытом;<br>- Создавали идеи продуктов и проверяли гипотезы с нулевым вложением в&nbsp;разработку
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -152,7 +152,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    .pgmItemSubTitle В своем докладе я расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и, самое главное, &mdash; как на нее влияет&nbsp;клиент.
+                    .pgmItemSubTitle В своем докладе я расскажу, как&nbsp;построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до&nbsp;задач и, самое главное, &mdash; как на&nbsp;нее влияет&nbsp;клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -181,7 +181,7 @@
                 .pgmItemTime 13:20 - 13:50
                 .pgmItemContent
                     .pgmItemTitle Клиентские сегменты: опыт Сбера в адаптации продуктов и&nbsp;каналов
-                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и&nbsp;разберем, как адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с инвалидностью.
+                    .pgmItemSubTitle Как делать сервисы, которые понравятся 105&nbsp;миллионам клиентов: молодежи и пенсионерам, детям и&nbsp;их родителям, иностранцам, бюджетникам, людям с&nbsp;инвалидностью и другим? Расскажем, как Сбер подходит к сегментации розничных клиентов, и&nbsp;разберем, как адаптировать сервис под&nbsp;клиента на&nbsp;примере особенного сегмента&nbsp;&ndash;&nbsp;людей с&nbsp;инвалидностью.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -203,7 +203,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с &laquo;нуля&raquo; в большом банке: ожидания и реальность
-                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &mdash; Уведомления. Когда ежедневно отправляешь 300 000 000 смс, а твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не имеющего аналогов на рынке?
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России &mdash; Уведомления. Когда ежедневно отправляешь 300 000 000 смс, а твоя аудитория &mdash; много миллионов человек, начинаешь смотреть на&nbsp;мир через призму масштабности. А что если ты начнешь создание абсолютно нового, при&nbsp;этом&nbsp;платного сервиса, не&nbsp;имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -219,7 +219,7 @@
                 .pgmItemTime 14:20 - 14:50
                 .pgmItemContent
                     .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с определенными ограничениями. Среди них &ndash; сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
+                    .pgmItemSubTitle На пути к созданию востребованного продукта &laquo;с&nbsp;нуля&raquo; команда сталкивается с&nbsp;определенными ограничениями. Среди них &ndash; сроки, выбор направления развития, нехватка ресурсов, отношения в&nbsp;команде, зависимость от других команд, внешние факторы. Какие инсайты и&nbsp;интересные кейсы команда собрала на&nbsp;пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -234,7 +234,7 @@
                 .pgmItemTime 14:50 - 15:20
                 .pgmItemContent
                     .pgmItemTitle Как не терять деньги на внутренних продуктах
-                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об этом говорят. Мы поговорим об основных вопросах, которые волнуют всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
+                    .pgmItemSubTitle Внутренние продукты &laquo;пилят&raquo; практически все, но очень мало об&nbsp;этом говорят. Мы поговорим об&nbsp;основных вопросах, которые волнуют всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -249,7 +249,7 @@
                 .pgmItemTime 15:20 - 15:50
                 .pgmItemContent
                     .pgmItemTitle Вендорозамещение за три месяца
-                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и сократить time-to-market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в условиях нехватки людей и денег?
+                    .pgmItemSubTitle Как быстро разработать замену сервисам Google и сократить time&#8209;to&#8209;market запуска рекламных кампаний? Возможно ли в разы увеличить конверсию в&nbsp;условиях нехватки людей и денег?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -292,7 +292,7 @@
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
-                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и зарубежную практики решения бизнес-задач, а&nbsp;на примере конкретных кейсов увидим, как выйти за рамки своей&nbsp;сферы деятельности и погрузиться в &laquo;полярные&raquo; отрасли для&nbsp;поиска&nbsp;новых&nbsp;решений.
+                    .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и&nbsp;зарубежную практики решения бизнес&#8209;задач, а&nbsp;на примере конкретных кейсов увидим, как выйти за&nbsp;рамки своей&nbsp;сферы деятельности и&nbsp;погрузиться в &laquo;полярные&raquo; отрасли для&nbsp;поиска&nbsp;новых&nbsp;решений.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -307,14 +307,14 @@
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS. реальность
-                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о барьерах, которые возникают на пути к проведению исследований, и способах их преодоления.
+                    .pgmItemSubTitle Работая над продуктом, команда выводит много новых фич. Когда же возникает необходимость проводить исследования, встает множество вопросов: как найти время у команды, зачем нужны исследования, если продукт работает, и&nbsp;другие. В открытом диалоге Владелец продукта и&nbsp;UX&#8209;исследователь расскажут о&nbsp;барьерах, которые возникают на пути к проведению исследований, и&nbsp;способах их&nbsp;преодоления.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/kostin.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Костин Никита
-                                .pgmItemSpeakerPos Владелец продукта для проверки гипотез Discovery, Сбер
+                                .pgmItemSpeakerPos Владелец продукта для&nbsp;проверки гипотез Discovery, Сбер
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/dyatlova.png")
@@ -329,7 +329,7 @@
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до ее реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
+                    .pgmItemSubTitle В своем выступлении я расскажу про опыт разработки продуктовой стратегии на&nbsp;примере создания онлайн-продукта корпоративного страхования. От идеи до&nbsp;ее&nbsp;реализации в этом случае прошло всего три месяца. Вместе с вами мы рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про&nbsp;UX/UI&#8209;исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
