--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -574,7 +574,7 @@ h2 {
     font-size: 16px;
     line-height: 20px;
     margin-top: 16px;
-
+    padding: 0 12px;
     text-align: center;
 
     color: rgba(238, 243, 255, 0.8);
