--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/SBSansText-Regular.woff') format('woff'),
-    url('fonts/SBSansText-Regular.ttf') format('truetype');
+    src: url('fonts/sbsanstext-regular.woff') format('woff'),
+    url('fonts/sbsanstext-regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/SBSansText-SemiboldItalic.woff') format('woff'),
-    url('fonts/SBSansText-SemiboldItalic.ttf') format('truetype');
+    src: url('fonts/sbsanstext-semibolditalic.woff') format('woff'),
+    url('fonts/sbsanstext-semibolditalic.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/SBSansText-Medium.woff') format('woff'),
-    url('fonts/SBSansText-Medium.ttf') format('truetype');
+    src: url('fonts/sbsanstext-medium.woff') format('woff'),
+    url('fonts/sbsanstext-medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/SBSansDisplay-Semibold.woff') format('woff'),
-    url('fonts/SBSansDisplay-Semibold.ttf') format('truetype');
+    src: url('fonts/sbsansdisplay-semibold.woff') format('woff'),
+    url('fonts/sbsansdisplay-semibold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/SBSansText-Bold.woff') format('woff'),
-    url('fonts/SBSansText-Bold.ttf') format('truetype');
+    src: url('fonts/sbsanstext-bold.woff') format('woff'),
+    url('fonts/sbsanstext-bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/SBSansText-Light.woff') format('woff'),
-    url('fonts/SBSansText-Light.ttf') format('truetype');
+    src: url('fonts/sbsanstext-Light.woff') format('woff'),
+    url('fonts/sbsanstext-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/SBSansDisplay-Thin.woff') format('woff'),
-    url('fonts/SBSansDisplay-Thin.ttf') format('truetype');
+    src: url('fonts/sbsansdisplay-Thin.woff') format('woff'),
+    url('fonts/sbsansdisplay-thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/SBSansDisplay-Regular.woff') format('woff'),
-    url('fonts/SBSansDisplay-Regular.ttf') format('truetype');
+    src: url('fonts/sbsansdisplay-regular.woff') format('woff'),
+    url('fonts/sbsansdisplay-regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/SBSansDisplay-Bold.woff') format('woff'),
-    url('fonts/SBSansDisplay-Bold.ttf') format('truetype');
+    src: url('fonts/sbsansdisplay-bold.woff') format('woff'),
+    url('fonts/sbsansdisplay-bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -81,8 +81,8 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/SBSansDisplay-Light.woff') format('woff'),
-    url('fonts/SBSansDisplay-Light.ttf') format('truetype');
+    src: url('fonts/sbsansdisplay-light.woff') format('woff'),
+    url('fonts/sbsansdisplay-light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
