--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'SB Sans Text';
-    src: url('fonts/sbsanstext-Light.woff') format('woff'),
-    url('fonts/sbsanstext-Light.ttf') format('truetype');
+    src: url('fonts/sbsanstext-light.woff') format('woff'),
+    url('fonts/sbsanstext-light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -54,7 +54,7 @@
 
 @font-face {
     font-family: 'SB Sans Display';
-    src: url('fonts/sbsansdisplay-Thin.woff') format('woff'),
+    src: url('fonts/sbsansdisplay-thin.woff') format('woff'),
     url('fonts/sbsansdisplay-thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
