--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
       .decor0.desktop
         img(src="assets/decor0.png")
       .decor0.mobile
-            img(src="assets/decor0mobile.svg")
+            img(src="assets/decor0mobile.png")
       .decor1
           img(src="assets/decor1.png")
       //.decor6
