--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -129,7 +129,7 @@
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Пинчук Екатерина
                                 .pgmItemSpeakerPos СРО Layer SberDevices, Исполнительный&nbsp;директор, Сбер
-                    
+
 
             .pgmItem
                 .pgmItemIco
@@ -283,7 +283,7 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/pustovit.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Пустовит Александр 
+                                .pgmItemSpeakerFio Пустовит Александр
                                 .pgmItemSpeakerPos Партнер в Product.Vision
 
             .pgmItem
@@ -294,7 +294,7 @@
                     .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
                     .pgmItemSubTitle В этом докладе мы поговорим о метриках качества в образовании - что показывают NPS, LTV&nbsp;и&nbsp;Transformation rate, и как они между собой связаны. Также изучим российскую и&nbsp;зарубежную практики решения бизнес&#8209;задач, а&nbsp;на примере конкретных кейсов увидим, как выйти за&nbsp;рамки своей&nbsp;сферы деятельности и&nbsp;погрузиться в &laquo;полярные&raquo; отрасли для&nbsp;поиска&nbsp;новых&nbsp;решений.
                     .pgmItemSpeakers
-                        .pgmItemSpeaker
+                        //.pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/prudnikov.png")
                             .pgmItemSpeakerName
