--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -115,7 +115,7 @@
                     .spkFio Попов Сергей
                     .pgmItemSpeakerPos Директор дивизиона &laquo;Транзакционный&nbsp;бизнес&raquo; ПАО Сбербанк
 
-                .spkItem
+                //.spkItem
                     .spkPhoto
                         .spkPhotoWr
                             img(src="assets/spk/prudnikov.png")
