Большие изменения в программе, добавление фото
Добавлено фото Могилина, изменено фото Кузьмина.

Множество изменений в программе и сокращение времени.

--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -8,7 +8,7 @@
                             img(src="assets/spk/afanasiev.png")
                         // У остальных спикоров картики в этом формате
                     .spkFio Афанасьев Егор
-                    .spkPos Chief Product Officer, SberCare, Сбер
+                    .spkPos CPO, SberCare, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -50,7 +50,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/kozlov.png")
                     .spkFio Козлов Дмитрий
-                    .spkPos Директор акселерационных программ, Product.vision
+                    .spkPos Директор по развитию, Product.Vision
 
                 .spkItem
                     .spkPhoto
@@ -71,12 +71,12 @@
                         .spkPhotoWr
                             img(src="assets/spk/kyzmin.png")
                     .spkFio Кузьмин Михаил
-                    .spkPos Владелец продукта Открытый Диалог и&nbsp;Сберкрафт, Сбер
+                    .spkPos Владелец продукта &laquo;Открытый Диалог&raquo; и&nbsp;&laquo;Сберкрафт&raquo;, Сбер
 
                 .spkItem
                     .spkPhoto
                         .spkPhotoWr
-                            img(src="assets/spk/user.png")
+                            img(src="assets/spk/mogilin.png")
                     .spkFio Могилин Артем
                     .spkPos Лидер трайба &laquo;Особенные&nbsp;решения&raquo;, Сбер
 
@@ -92,7 +92,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/pinchuk.png")
                     .spkFio Пинчук Екатерина
-                    .spkPos СРО Layer SberDevices, Исполнительный&nbsp;директор, Сбер
+                    .spkPos СРО Layer, SberDevices
 
                 .spkItem
                     .spkPhoto
