--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -45,7 +45,7 @@
                 .pgmItemTime 10:20 - 11:15
                 .pgmItemContent
                     .pgmItemTitle От продукта к клиенту. Как найти баланс между прибылью и лояльностью?
-                    //.pgmItemSubTitle 
+                    //.pgmItemSubTitle
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -70,7 +70,7 @@
                                     img(width="40" height="40" src="assets/spk/popov.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Попов Сергей
-                                    .pgmItemSpeakerPos Директор трайба &laquo;Транзакционный&nbsp;бизнес&raquo;, Сбер
+                                    .pgmItemSpeakerPos Лидер трайба «Транзакционный бизнес», Сбер
 
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
@@ -101,7 +101,7 @@
                                 .pgmItemSpeakerFio Попко Павел
                                 .pgmItemSpeakerPos Ведущий аналитик команды &laquo;Особенный&nbsp;банк для&nbsp;людей с&nbsp;инвалидностью&raquo;, Дивизион&nbsp;&laquo;Особенные&nbsp;решения&raquo;, незрячий&nbsp;эксперт по&nbsp;цифровой доступности, Сбер
 
-                
+
                 //.pgmItemContent
                     .pgmItemTitle От Run к Change. Четыре уровня работы над продуктом.
                     .pgmItemSubTitle Поговорим про то, в каких случаях стоит применять продуктовый подход, а когда он не нужен. Расскажу про четыре уровня работы над продуктом и про то, что необходимо на каждом из&nbsp;этих&nbsp;уровней. Разберем, где чаще всего случаются проблемы и почему.
@@ -295,7 +295,7 @@
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Барышникова Елена
                                 .pgmItemSpeakerPos Владелец продукта в&nbsp;Центре Корпоративного&nbsp;Страхования, Сбер
-                
+
 
             .pgmItem
                 .pgmItemIco
