--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -113,7 +113,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/popov.png")
                     .spkFio Попов Сергей
-                    .spkPos Директор дивизиона &laquo;Транзакционный&nbsp;бизнес&raquo; ПАО Сбербанк
+                    .spkPos Лидер трайба «Транзакционный бизнес», Сбер ПАО Сбербанк
 
                 //.spkItem
                     .spkPhoto
