--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -78,7 +78,7 @@
                         .spkPhotoWr
                             img(src="assets/spk/mogilin.png")
                     .spkFio Могилин Артем
-                    .spkPos Лидер трайба &laquo;Особенные&nbsp;решения&raquo;, Сбер
+                    .spkPos И.о. лидера трайба &laquo;Особенные&nbsp;решения&raquo;, Сбер
 
                 .spkItem
                     .spkPhoto
